external-crates/move/crates/move-compiler/tests/development/typing/signed_int_casting.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:4:16
  │
4 │         let a: i8 = 10i8;
  │                ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:4:21
  │
4 │         let a: i8 = 10i8;
  │                     ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:5:17
  │
5 │         let _b: i16 = a as i16;
  │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:5:23
  │
5 │         let _b: i16 = a as i16;
  │                       ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:6:17
  │
6 │         let _c: i32 = a as i32;
  │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:6:23
  │
6 │         let _c: i32 = a as i32;
  │                       ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:7:17
  │
7 │         let _d: i64 = a as i64;
  │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:7:23
  │
7 │         let _d: i64 = a as i64;
  │                       ^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:8:17
  │
8 │         let _e: i128 = a as i128;
  │                 ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_casting.move:8:24
  │
8 │         let _e: i128 = a as i128;
  │                        ^^^^^^^^^ Signed integer types are under development
